--- a/app/design/frontend/base/default/template/shipping/tracking/popup.phtml
+++ b/app/design/frontend/base/default/template/shipping/tracking/popup.phtml
@@ -13,7 +13,7 @@
 <?php $_results = $this->getTrackingInfo(); ?>
 <div class="page-title title-buttons">
     <h1><?= $this->__('Tracking Information') ?></h1>
-    <button class="button" onclick="window.close(); window.opener.focus();"><?= $this->__('Close Window') ?></button>
+    <button class="button" onclick="window.close(); window.opener.focus();"><?= $this->getIconSvg('x') ?></button>
 </div>
 <?php if(count($_results) > 0): ?>
 <?php foreach($_results as $shipid => $_result): ?>
@@ -156,6 +156,3 @@
 <?php else: ?>
     <p><?= $this->__('There is no tracking available.') ?></p>
 <?php endif ?>
-<div class="buttons-set">
-    <button type="button" title="<?= $this->quoteEscape($this->__('Close Window')) ?>" class="button" onclick="window.close(); window.opener.focus();"><?= $this->__('Close Window') ?></button>
-</div>
