--- a/app/design/frontend/base/default/layout/sales.xml
+++ b/app/design/frontend/base/default/layout/sales.xml
@@ -63,6 +63,7 @@ Customer account home dashboard layout
                 <block type="core/text_list" name="sales.order.history.info" as="info" translate="label">
                     <label>Order History Info</label>
                 </block>
+                <block type="sales/order_missing" name="sales.order.missing" as="missing_orders" template="sales/order/missing.phtml"/>
             </block>
         </reference>
     </sales_order_history>
