--- a/app/design/frontend/base/default/template/customer/account/dashboard.phtml
+++ b/app/design/frontend/base/default/template/customer/account/dashboard.phtml
@@ -29,4 +29,5 @@
     <?= $this->getChildHtml('address') ?>
     <?= $this->getChildHtml('info1') ?>
     <?= $this->getChildHtml('info2') ?>
+    <?= $this->getChildHtml('missing_orders') ?>
 </div>
