--- a/app/design/frontend/base/default/template/sales/order/history.phtml
+++ b/app/design/frontend/base/default/template/sales/order/history.phtml
@@ -59,3 +59,4 @@
 <?php else: ?>
     <p><?= $this->__('You have placed no orders.') ?></p>
 <?php endif ?>
+<?= $this->getChildHtml('missing_orders') ?>
