--- a/app/design/frontend/base/default/layout/sales.xml
+++ b/app/design/frontend/base/default/layout/sales.xml
@@ -51,7 +51,7 @@ Customer account home dashboard layout
         <!--remove name="customer_account_dashboard_top"/-->
         <reference name="customer_account_dashboard">
             <block type="sales/order_recent" name="customer_account_dashboard_top" as="top" template="sales/order/recent.phtml"/>
-            <block type="sales/order_missing" name="customer_account_dashboard_missing_orders" as="missing_orders_after_recent" template="sales/order/missing.phtml"/>
+            <block type="core/template" name="customer_account_dashboard_missing_orders" as="missing_orders_after_recent" template="sales/order/missing.phtml"/>
         </reference>
 
     </customer_account_index>
@@ -64,7 +64,7 @@ Customer account home dashboard layout
                 <block type="core/text_list" name="sales.order.history.info" as="info" translate="label">
                     <label>Order History Info</label>
                 </block>
-                <block type="sales/order_missing" name="sales.order.missing" as="missing_orders" template="sales/order/missing.phtml"/>
+                <block type="core/template" name="sales.order.missing" as="missing_orders" template="sales/order/missing.phtml"/>
             </block>
         </reference>
     </sales_order_history>
