--- a/app/design/adminhtml/default/default/template/directory/region_import_dialog.phtml
+++ b/app/design/adminhtml/default/default/template/directory/region_import_dialog.phtml
@@ -6,6 +6,8 @@
  * @copyright  Copyright (c) 2025 Maho (https://mahocommerce.com)
  * @license    https://opensource.org/licenses/osl-3.0.php  Open Software License (OSL 3.0)
  */
+
+/** @var Mage_Core_Block_Template $this */
 ?>
 
 <script type="text/javascript">
