--- a/public/skin/adminhtml/default/default/override.css
+++ b/public/skin/adminhtml/default/default/override.css
@@ -1225,4 +1225,11 @@ ul.tabs a.changed span.changed {
     background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24" fill="%235f6368"><path d="M480-80q-83 0-156-31t-127-86q-54-54-85-127T80-480q0-83 32-156t85-127q54-54 127-85t156-32q83 0 156 32t127 85q54 54 86 127t31 156q0 83-31 156t-86 127q-54 54-127 86T480-80Zm0-80q54 0 104-17t92-51L228-676q-33 42-50 92t-18 104q0 134 93 227t227 93Zm252-124q33-42 51-92t17-104q0-134-93-227t-227-93q-54 0-104 18t-92 50l448 448Z"/></svg>');
 }
 
+.rule-param svg {
+    width: 18px;
+    height: 18px;
+    stroke: #333;
+    vertical-align: bottom;
+}
+
 /*# sourceMappingURL=override.css.map */
