--- a/app/design/frontend/base/default/template/blog/list.phtml
+++ b/app/design/frontend/base/default/template/blog/list.phtml
@@ -14,14 +14,24 @@ $posts = $this->getPosts();
 
 <h1><?= $this->__('Blog') ?></h1>
 
-<div id="blog_posts">
-    <?php foreach ($posts->getItems() as $post): ?>
-        <a href="<?= Mage::getUrl() . "blog/{$post->getUrlKey()}" ?>.html" class="blog_post_item">
-            <?php if ($post->hasImage()): ?>
-                <img src="<?= $post->getImageUrl() ?>" alt="<?= $this->escapeHtml($post->getTitle()) ?>" />
-            <?php endif ?>
-            <strong><?= $post->getTitle() ?></strong>
-            <div class="blog_post_date"><?= $this->formatDate($post->getPublishedAt() ?? $post->getCreatedAt()) ?></div>
-        </a>
-    <?php endforeach ?>
-</div>
+<?php if ($posts->getSize()): ?>
+    <div id="blog_posts">
+        <?php foreach ($posts->getItems() as $post): ?>
+            <a href="<?= $post->getUrl() ?>" class="blog_post_item">
+                <?php if ($post->hasImage()): ?>
+                    <img src="<?= $post->getImageUrl() ?>" alt="<?= $this->escapeHtml($post->getTitle()) ?>" />
+                <?php endif ?>
+                <strong><?= $post->getTitle() ?></strong>
+                <div class="blog_post_date"><?= $this->formatDate($post->getPublishedAt() ?? $post->getCreatedAt()) ?></div>
+            </a>
+        <?php endforeach ?>
+    </div>
+    
+    <?php if ($posts->getLastPageNumber() > 1): ?>
+        <div class="pager">
+            <?= $this->getPagerHtml() ?>
+        </div>
+    <?php endif ?>
+<?php else: ?>
+    <p class="note-msg"><?= $this->__('There are no blog posts to display.') ?></p>
+<?php endif ?>
