--- a/public/skin/frontend/base/default/css/blog.css
+++ b/public/skin/frontend/base/default/css/blog.css
@@ -62,6 +62,10 @@
 }
 
 /* Blog post single view */
+.blog-index-view p {
+    margin-bottom: 1rem;
+}
+
 .blog_post_image {
     max-width: 100%;
     margin: auto;
