--- a/public/skin/frontend/base/default/css/blog.css
+++ b/public/skin/frontend/base/default/css/blog.css
@@ -1,5 +1,5 @@
 /* Blog listing page */
-.blog-index-view h1 {
+.blog-index-view #main-content h1 {
     margin-bottom: 0;
 }
 
@@ -66,7 +66,7 @@
 }
 
 /* Blog post single view */
-.blog-index-view p {
+.blog-index-view #main-content p {
     margin-bottom: 1rem;
 }
 
